--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     box-sizing: border-box;
 }
@@ -30,17 +28,14 @@ body {
 
 .time {
     display: flex;
-    width: 300px;
+    width: 600px;
     justify-content: space-evenly;
     align-items: center;
+    margin: 2rem;
 }
 
-.h6 {
-    font-size: .8rem;
-}
-
-.h4 {
-    font-size: 1.3rem;
+.time__display {
+    font-size: 2rem;
 }
 
 .cardHolder {
@@ -49,13 +44,15 @@ body {
     perspective: 1000px;
     display: flex;
     flex-wrap: wrap;
-    width: 300px;
+    width: 600px;
+    height: 325px;
+    justify-content: space-evenly;
 }
  
 .card {
     display: flex;
-    width: 50px;
-    height: 73px;
+    width: 100px;
+    height: 145px;
     transition: all 0.8s ease-out;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
@@ -81,8 +78,8 @@ body {
  
 .flip-box-front, .flip-box-back {
     position: absolute;
-    width: 50px;
-    height: 73px;
+    width: 100px;
+    height: 145px;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -120,3 +117,83 @@ body {
     background-image: url(./img/flash.png); 
 }
 
+
+
+
+.modal {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);  
+}
+
+.modal__article {
+    font-size: 1.3rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.modal__head {
+    display: flex;
+    justify-content: space-between;
+    padding-top: .5rem;
+    padding-bottom: 1rem;
+}
+
+.modal__close {
+    display: flex;
+    color: rgb(170, 170, 170);
+    background-color: transparent;
+    border: transparent;
+    font-size: 1rem;
+}
+
+.modal__close:hover, .close:focus {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    cursor: pointer; 
+}
+
+.modal__content {
+    display: inline-block;
+    text-align: left;
+    background-color: rgb(245, 245, 245);
+    padding: 1rem;
+    border: 1px solid rgb(150, 150, 150);
+    max-height: 100%;
+    max-width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation: open .5s;
+}
+@media only screen and (min-width: 560px) {
+    .modal__content {
+        width: 50%;
+    }
+}
+
+@keyframes open {
+    0% {opacity:0;} 
+    100% {opacity:1;}
+}
+
+.modal--up {
+    display: flex;
+}
+
+.modal--hide {
+    display: none;
+    transition: .3s;
+  }
+  
+@keyframes close {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+}
